--- a/index.html
+++ b/index.html
@@ -13,10 +13,8 @@
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-        <img id="logo" src="logo.png">
+       
+        <img id="logo" src="logo.gif">
         <div class="about"></div>
 
         <div id="menu">
